--- a/05gy.tex
+++ b/05gy.tex
@@ -9,7 +9,13 @@
 %\usepackage{marvosym}
 
 \usepackage{listings}
-\lstset{language=C++, basicstyle=\ttfamily, keywordstyle=\color{blue}\ttfamily, stringstyle=\color{red}\ttfamily}
+\lstset{
+	language=C++, 
+	basicstyle=\ttfamily, 
+	keywordstyle=\color{blue}\ttfamily, 
+	stringstyle=\color{red}\ttfamily,
+	tabsize = 4
+}
 
 \makeatletter
 \renewcommand*{\mathellipsis}{%
