--- a/09gy_cpp.tex
+++ b/09gy_cpp.tex
@@ -100,7 +100,7 @@
 		
 		9. óra.
 	\end{center}
-	A jegyzetet \textsc{Umann} Kristóf készítette \textsc{Horváth} Gábor  előadásán. (\today)
+	A jegyzetet \textsc{Umann} Kristóf készítette \textsc{Brunner} Tibor  előadásán. (\today)
 	
 	\section{STL}
 
